--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "flow-radar",
+  "name": "flow-radar-bot",
   "version": "1.0.0",
   "main": "index.js",
-  "engines": { "node": ">=22.0.0" },
-  "scripts": { "start": "node index.js" },
-  "dependencies": { "ws": "^8.18.0" }
+  "dependencies": {
+    "ws": "^8.18.0",
+    "node-fetch": "^2.7.0"
+  }
 }
